--- a/fn-server/Dockerfile
+++ b/fn-server/Dockerfile
@@ -1,4 +1,5 @@
 FROM denoland/deno:latest
+EXPOSE 1993
 COPY . /usr/src/app
 RUN deno cache app.ts
-CMD ["run", "--allow-net", "--allow-read", "./app.ts"]
+CMD ["run", "--allow-net", "--allow-read", "app.ts"]
