--- a/fn-server/Dockerfile
+++ b/fn-server/Dockerfile
@@ -1,5 +1,11 @@
 FROM denoland/deno:latest
-EXPOSE 1993
+
+EXPOSE 9798
+
 COPY . /usr/src/app
+
+WORKDIR /usr/src/app
+
 RUN deno cache app.ts
-CMD ["run", "--allow-net", "--allow-read", "app.ts"]
+
+CMD ["run", "--allow-all", "app.ts"]
